增添账号限制

--- a/pages/shop/shop.wxss
+++ b/pages/shop/shop.wxss
@@ -261,3 +261,12 @@ icon {
 .money_color{
   color: #ff5777
 }
+/* -------------------------------------登录按钮-------------------- */
+.nolog_btn{
+  margin-top: 48%
+}
+.btn {
+  width: 80%;
+  color: #fff;
+  background-color: #ff5777;
+}
