--- a/pages/indent/indent.wxss
+++ b/pages/indent/indent.wxss
@@ -1,1 +1,80 @@
 /* pages/indent/indent.wxss */
+
+.flex {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-top: 30rpx;
+  border-top: 1rpx solid #ccc;
+  border-bottom: 1rpx solid #ccc;
+}
+
+.bg_box {
+  background: #fff;
+}
+
+.size_img {
+  width: 160rpx;
+  margin: 20rpx;
+}
+
+.shop_box {
+  width: 500rpx;
+}
+
+.shop_text {
+  height: 88rpx;
+  font-size: 30rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.style {
+  font-size: 24rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 13;
+  -webkit-box-orient: vertical;
+  color: #999;
+}
+
+.money {
+  display: flex;
+  justify-content: space-between;
+}
+
+.promotion {
+  font-size: 30rpx;
+}
+
+.price {
+  font-size: 24rpx;
+  text-decoration: line-through;
+  color: #999;
+  margin-left: 10rpx;
+}
+
+/* ---------------------------------分类表-------------------------------- */
+
+.shop_flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+.page_title {
+  justify-content: space-around;
+  align-items: center;
+}
+
+.item {
+  padding: 20rpx;
+  border-bottom: 4rpx solid #fff;
+}
+
+.active {
+  border-bottom: 4rpx solid #ff5777;
+}
