--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -66,8 +66,6 @@
   margin-left: 10rpx;
 }
 
-
-
 .flex {
   display: flex;
 }
@@ -320,7 +318,7 @@
 }
 
 .shop_box {
-  margin-top:20rpx;
+  margin-top: 20rpx;
 }
 
 .shop_buy {
@@ -446,4 +444,27 @@
 
 .num_chouse {
   color: #ed4566;
+}
+
+.text_red {
+  color: #ff5777;
+}
+/* ------------------------底框----------------------------- */
+.bottom_top{
+  padding: 20rpx 0;
+}
+.bottom{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50rpx;
+  background: #f6f6f6;
+}
+.bottom_text{
+  font-size: 30rpx;
+  color: #ff496c;
+}
+.title_img_small {
+  width: 40rpx;
+  height: 40rpx;
 }
