--- a/pages/seek/seek.wxml
+++ b/pages/seek/seek.wxml
@@ -1,15 +1,19 @@
 <!--pages/seek/seek.wxml-->
 <view>
-  <!-- 搜索框 -->
-  <view class='title_bg title'>
-    <image src='../../img/scan.png' class="title_img" bindtap='phone' />
-    <view class='title_input title'>
-      <image src='../../img/search.png' class="title_img_small" />
-      <input class='title_input_val' placeholder='搜索商品' placeholder-class='placeholder' bindconfirm='seek'></input>
-      <image src='../../img/camera.png' class="title_img_small" />
+  <view class='fixation'>
+    <!-- 搜索框 -->
+    <view class='title_bg title'>
+      <image src='../../img/scan.png' class="title_img" bindtap='phone' />
+      <view class='title_input title'>
+        <image src='../../img/search.png' class="title_img_small" />
+        <input class='title_input_val' placeholder='搜索商品' placeholder-class='placeholder' value='{{inputVal}}' bindconfirm='seek'></input>
+        <image src='../../img/camera.png' class="title_img_small" />
+      </view>
+      <image src='../../img/code.png' class="title_img" bindtap='phone' />
     </view>
-    <image src='../../img/code.png' class="title_img" bindtap='phone' />
   </view>
+  <!-- 撑高 -->
+  <view class='title_height'></view>
   <!-- 商品列表 -->
   <view class='shop'>
     <view wx:for="{{list}}" wx:key="{{index}}" class='shop_box' data-item='{{item}}' bindtap="shop_click">
@@ -25,6 +29,13 @@
           <image src='{{img+"xx.png"}}' class="title_img_small" />
         </view>
       </view>
+    </view>
+  </view>
+  <!-- 底框 -->
+  <view class='bottom bottom_top'>
+    <view class='bottom'>
+      <image src='{{img+"mogu.png"}}' class="title_img_small" />
+      <text class='bottom_text'>已经到底了</text>
     </view>
   </view>
 </view>
